--- a/views/จัดการนิสิต.ejs
+++ b/views/จัดการนิสิต.ejs
@@ -68,19 +68,30 @@
           <table class="table table-striped">
               <thead>
                 <tr>
-                  <td><b>Username</b></td>
-                  <td><b>Password</b></td>
-                  <td><b>User type</b></td>
-                  <td colspan="2"><b>Action</b></td>
+                  <td><b>รหัสนิสิต</b></td>
+                  <td><b>ชื่อ-นามสกุล</b></td>
+                  <td><b>คณะ</b></td>
+                  <td><b>สาขา</b></td>
+                  <td><b>ชั้นปี</b></td>
+                  <td><b>สาย</b></td>
+                  <td><b>กลุ่มเรียน</b></td>
+                  <td><b>ข้อมูลเพิ่มเติม</b></td>
+                  <td><b>แก้ไข</b></td>
+                  <td><b>ลบ</b></td>
                 </tr>
               </thead>
               <tbody>
                 <% for(var i=0; i < users.length; i++) { %>
                   
                 <tr>
-                  <td><%= users[i].Username %></td>
-                  <td><%= users[i].Password %></td>
-                  <td><%= users[i].Utype %></td>
+                  <td><%= users[i].ID %></td>
+                  <td><%= users[i].name %> - <%= users[i].surname %></td>
+                  <td><%= users[i].faculty %></td>
+                  <td><%= users[i].branch %></td>
+                  <td><%= users[i].year %></td>
+                  <td><%= users[i].course %></td>
+                  <td><%= users[i].group %></td>
+                  <td><a href="#" class="btn btn-primary">ดูข้อมูลเพิ่มเติม</a></td>
                   <td><a href="/f/edit/<%= users[i]._id %>" class="btn btn-primary">Edit</a></td>
                   <td><a href="/f/delete/<%= users[i]._id %>" class="btn btn-danger">Delete</a></td>
                 </tr>
@@ -88,7 +99,7 @@
                 <% } %>
               </tbody>
             </table>
-            <a href="/f/create" class="btn btn-success">add user cunt</a>
+            <a href="/f/addStudent" class="btn btn-success">add user cunt</a>
             
         </div>
       </div>
