--- a/views/จัดการอาจารย์.ejs
+++ b/views/จัดการอาจารย์.ejs
@@ -68,27 +68,32 @@
           <table class="table table-striped">
               <thead>
                 <tr>
-                  <td><b>Username</b></td>
-                  <td><b>Password</b></td>
-                  <td><b>User type</b></td>
-                  <td colspan="2"><b>Action</b></td>
+                  <td><b>ชื่อ-นามสกุล</b></td>
+                  <td><b>คณะ</b></td>
+                  <td><b>สาขา</b></td>
+                  <td><b>ตำแหน่ง</b></td>
+                  <td><b>ข้อมูลเพิ่มเติม</b></td>
+                  <td><b>แก้ไข</b></td>
+                  <td><b>ลบ</b></td>
                 </tr>
               </thead>
               <tbody>
-                <% for(var i=0; i < users.length; i++) { %>
+                <% for(var i=0; i < person.length; i++) { %>
                   
                 <tr>
-                  <td><%= users[i].Username %></td>
-                  <td><%= users[i].Password %></td>
-                  <td><%= users[i].Utype %></td>
-                  <td><a href="/f/edit/<%= users[i]._id %>" class="btn btn-primary">Edit</a></td>
-                  <td><a href="/f/delete/<%= users[i]._id %>" class="btn btn-danger">Delete</a></td>
+                  <td><%= person[i].firstName %>  <%= person[i].lastName %></td>
+                  <td><%= person[i].faculty %></td>
+                  <td><%= person[i].major %></td>
+                  <td><%= person[i].position %></td>
+                  <td><a href="#" class="btn btn-primary">ตรวจสอบ</a></td>
+                  <td><a href="/f/edit/<%= person[i]._id %>" class="btn btn-primary">Edit</a></td>
+                  <td><a href="/f/delete/<%= person[i]._id %>" class="btn btn-danger">Delete</a></td>
                 </tr>
       
                 <% } %>
               </tbody>
             </table>
-            <a href="/f/create" class="btn btn-success">add user cunt</a>
+            <a href="/f/addTeacher" class="btn btn-success">เพิ่ม</a>
             
         </div>
       </div>
