--- a/views/addTeacher.ejs
+++ b/views/addTeacher.ejs
@@ -11,45 +11,30 @@
   </head>
   <body>
     <div class="container">
-        <h1 align="center">เพิ่มนิสิต</h1>
+        <h1 align="center">เพิ่มอาจารย์</h1>
 
         <form method="post" action="/f/post">
           <div class="form-group">
-            <input type="text" class="form-control" name="username" placeholder="ชื่อผู้ใช้(รหัสนิสิต)">
+            <input type="text" class="form-control" name="username" placeholder="ชือผู้ใช้">
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="password" placeholder="รหัสผ่าน">
           </div>
-
           <div class="form-group">
-            <select class="form-control" id="sel1" name="prefixName">
-              <option>นาย</option>
-              <option>นางสาว</option>
-              <option>นาง</option>
-            </select>
-          </div>
-
-          <div class="form-group">
-            <input type="text" class="form-control" name="firstName" placeholder="ชื่อ">
+            <input type="text" class="form-control" name="name" placeholder="ชื่อ">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="lastName" placeholder="นามสกุล">
+            <input type="text" class="form-control" name="surname" placeholder="นามสกุล">
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="faculty" placeholder="คณะ">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="major" placeholder="สาขา">
+            <input type="text" class="form-control" name="branch" placeholder="สาขา">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="year" placeholder="ชั้นปี">
+            <input type="text" class="form-control" name="position" placeholder="ตำแหน่ง">
           </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="branch" placeholder="สาย">
-          </div>  
-          <div class="form-group">
-            <input type="text" class="form-control" name="sector" placeholder="กลุ่มเรียน">
-          </div>         
           <button type="submit" class="btn btn-info float-right" >ยืนยัน</button>
           <button type="cancel" class="btn btn-info float-right" href="/f">ยกเลิก</button>
         </form>
