--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,25 +3,53 @@
   <head>
     <meta charset="utf-8">
     <title>Edit Coin</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   </head>
   <body>
     <div class="container">
         <h1>Edit User</h1>
-        <form method="post" action="/f/update/<%= user._id %>">
           <div class="form-group">
-            <label for="item">Username</label>
-            <input type="text" class="form-control"  name="Username" value="<%= user.Username %>">
+            <input type="text" class="form-control" name="username" value="<%= person.username %>">
           </div>
           <div class="form-group">
-            <label for="item">Password</label>
-            <input type="text" class="form-control"  name="Password" value="<%= user.Password %>">
+            <input type="text" class="form-control" name="password" value="<%= person.password %>">
+          </div>
+
+          <div class="form-group">
+            <select class="form-control" id="sell" name="prefixName" value="<%= person.prefixName %>">
+              <option >นาย</option>
+              <option >นางสาว</option>
+              <option >นาง</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" name="firstName" value="<%= person.firstName %>">
           </div>
           <div class="form-group">
-            <label for="item">User Type</label>
-            <input type="text" class="form-control"  name="Utype" value="<%= user.Utype%>">
+            <input type="text" class="form-control" name="lastName" value="<%= person.lastName %>">
           </div>
-          <button type="submit" class="btn btn-default">Update</button>
+          <div class="form-group">
+            <input type="text" class="form-control" name="faculty" value="<%= person.faculty %>">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="major" value="<%= person.major %>">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="year" value="<%= person.year %>">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="branch" value="<%= person.branch %>">
+          </div>  
+          <div class="form-group">
+            <input type="text" class="form-control" name="sector" value="<%= person.sector %>">
+          </div>         
+          <button type="submit" class="btn btn-info float-right" >ยืนยัน</button>
+          <button type="cancel" class="btn btn-info float-right" href="/f">ยกเลิก</button>
         </form>
     </div>
     
