--- a/views/เมนูอาจารย์.ejs
+++ b/views/เมนูอาจารย์.ejs
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">จัดการตึก</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/f">จัดการบุคลากร</a>
+            <a class="nav-link" href="/manage/student">จัดการบุคลากร</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">คอร์สเรียน</a>
