--- a/views/addStudent.ejs
+++ b/views/addStudent.ejs
@@ -13,7 +13,7 @@
     <div class="container">
         <h1 align="center">เพิ่มนิสิต</h1>
 
-        <form method="post" action="/f/post">
+        <form method="post" action="/manage/student/post">
           <div class="form-group">
             <input type="text" class="form-control" name="username" placeholder="ชื่อผู้ใช้(รหัสนิสิต)">
           </div>
@@ -29,6 +29,9 @@
             </select>
           </div>
 
+          <div class="form-group">
+            <input type="text" class="form-control" name="ID" placeholder="รหัสนิสิต">
+          </div>
           <div class="form-group">
             <input type="text" class="form-control" name="firstName" placeholder="ชื่อ">
           </div>
