--- a/views/addTeacher.ejs
+++ b/views/addTeacher.ejs
@@ -13,24 +13,33 @@
     <div class="container">
         <h1 align="center">เพิ่มอาจารย์</h1>
 
-        <form method="post" action="/f/post">
+        <form method="post" action="/manage/teacher/post">
           <div class="form-group">
             <input type="text" class="form-control" name="username" placeholder="ชือผู้ใช้">
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="password" placeholder="รหัสผ่าน">
           </div>
+          
           <div class="form-group">
-            <input type="text" class="form-control" name="name" placeholder="ชื่อ">
+            <select class="form-control" id="sel1" name="prefixName">
+              <option>นาย</option>
+              <option>นางสาว</option>
+              <option>นาง</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control" name="firstName" placeholder="ชื่อ">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="surname" placeholder="นามสกุล">
+            <input type="text" class="form-control" name="lastName" placeholder="นามสกุล">
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="faculty" placeholder="คณะ">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="branch" placeholder="สาขา">
+            <input type="text" class="form-control" name="major" placeholder="สาขา">
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="position" placeholder="ตำแหน่ง">
