--- a/views/editStudent.ejs
+++ b/views/editStudent.ejs
@@ -25,7 +25,7 @@
 
       <div class="form-group">
         <select class="form-control" id="sell" name="prefixName" value="<%= person.prefixName %>">
-          <option  value="<%= person.prefixName %>" disabled selected hidden> <%= person.prefixName %> </option>
+          <option  value="<%= person.prefixName %>" hidden> <%= person.prefixName %> </option>
           <option>นาย</option>
           <option>นางสาว</option>
           <option>นาง</option>
@@ -57,7 +57,7 @@
         <input type="text" class="form-control" name="sector" value="<%= person.sector %>">
       </div>
       <button type="submit" class="btn btn-info float-right">ยืนยัน</button>
-      <button type="cancel" class="btn btn-info float-right" href="/f">ยกเลิก</button>
+      
   </div>
   </form>
 
