--- a/views/menuTeacher.ejs
+++ b/views/menuTeacher.ejs
@@ -15,15 +15,15 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded" style="min-height: 140px;">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">
-      <img src="../images/User icon.jpg" style="width:140px;">
-    </a>
+    <p class="navbar-brand" href="#">
+      <img src="./images/User icon.jpg" style="width:140px;">
+    </p>
 
     <ul class="navbar-nav ml-auto" style="color:white; ">
       <li>นาย &nbsp; xxxxxxxxxx &nbsp;</li>
       <li>TYPE &nbsp;</li>
       <li>Academic staff &nbsp;</li>
-      <li><img src="../images/LogOut icon.png" style="width:40px;"></li>
+      <li><a href="/login"><img src="./images/LogOut icon.png" style="width:40px;" ></a></li>
     </ul>
   </nav>
 
