--- a/views/studentManage.ejs
+++ b/views/studentManage.ejs
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded" style="min-height: 140px;">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="#">
-      <img src="../images/LogOut icon.png" style="width:140px;">
+      <img src="../images/User icon.jpg" style="width:140px;">
     </a>
 
     <ul class="navbar-nav ml-auto" style="color:white; ">
@@ -58,14 +58,15 @@
 
       <div class="col-sm-10">
         <div class="container">
-          
+
           <ul class="nav nav-tabs">
             <li class="nav-item"><a class="nav-link active" href="/manage/student">จัดการนิสิต</a></li>
             <li class="nav-item"><a class="nav-link" href="/manage/staff">จัดการเจ้าหน้าที่</a></li>
             <li class="nav-item"><a class="nav-link" href="/manage/teacher">จัดการอาจารย์</a></li>
           </ul>
 
-          <table class="table table-striped">
+          <div style="height: 300px !important; overflow: scroll;">
+            <table class="table table-striped">
               <thead>
                 <tr>
                   <td><b>รหัสนิสิต</b></td>
@@ -82,10 +83,10 @@
               </thead>
               <tbody>
                 <% for(var i=0; i < person.length; i++) { %>
-                  
+
                 <tr>
                   <td><%= person[i].username %></td>
-                  <td><%= person[i].firstName %>  <%= person[i].lastName %></td>
+                  <td><%= person[i].firstName %> <%= person[i].lastName %></td>
                   <td><%= person[i].faculty %></td>
                   <td><%= person[i].major %></td>
                   <td><%= person[i].year %></td>
@@ -95,12 +96,14 @@
                   <td><a href="student/edit/<%= person[i]._id %>" class="btn btn-primary">Edit</a></td>
                   <td><a href="student/delete/<%= person[i]._id %>" class="btn btn-danger">Delete</a></td>
                 </tr>
-      
+
                 <% } %>
               </tbody>
             </table>
-            <a href="student/addStudent" class="btn btn-success">เพิ่ม</a>
-            
+          </div>
+
+          <a href="student/addStudent" class="btn btn-success">เพิ่ม</a>
+
         </div>
       </div>
 
