--- a/views/studentManage.ejs
+++ b/views/studentManage.ejs
@@ -17,15 +17,15 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded" style="min-height: 140px;">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">
-      <img src="../images/User icon.jpg" style="width:140px;">
-    </a>
+    <p class="navbar-brand" href="#">
+      <img src="/images/User icon.jpg" style="width:140px;">
+    </p>
 
     <ul class="navbar-nav ml-auto" style="color:white; ">
       <li>นาย &nbsp; xxxxxxxxxx &nbsp;</li>
       <li>TYPE &nbsp;</li>
       <li>Academic staff &nbsp;</li>
-      <li><img src="../images/LogOut icon.png" style="width:40px;"></li>
+      <li><a href="/login"><img src="../images/LogOut icon.png" style="width:40px;"></a></li>
     </ul>
   </nav>
 
@@ -65,43 +65,40 @@
             <li class="nav-item"><a class="nav-link" href="/manage/teacher">จัดการอาจารย์</a></li>
           </ul>
 
-          <div style="height: 300px !important; overflow: scroll;">
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <td><b>รหัสนิสิต</b></td>
-                  <td><b>ชื่อ-นามสกุล</b></td>
-                  <td><b>คณะ</b></td>
-                  <td><b>สาขา</b></td>
-                  <td><b>ชั้นปี</b></td>
-                  <td><b>สาย</b></td>
-                  <td><b>กลุ่มเรียน</b></td>
-                  <td><b>ข้อมูลเพิ่มเติม</b></td>
-                  <td><b>แก้ไข</b></td>
-                  <td><b>ลบ</b></td>
-                </tr>
-              </thead>
-              <tbody>
-                <% for(var i=0; i < person.length; i++) { %>
+          <table class="table table-striped" id="studentModal">
+            <thead>
+              <tr>
+                <td><b>รหัสนิสิต</b></td>
+                <td><b>ชื่อ-นามสกุล</b></td>
+                <td><b>คณะ</b></td>
+                <td><b>สาขา</b></td>
+                <td><b>ชั้นปี</b></td>
+                <td><b>สาย</b></td>
+                <td><b>กลุ่มเรียน</b></td>
+                <td><b>ข้อมูลเพิ่มเติม</b></td>
+                <td><b>แก้ไข</b></td>
+                <td><b>ลบ</b></td>
+              </tr>
+            </thead>
+            <tbody>
+              <% for(var i=0; i < person.length; i++) { %>
 
-                <tr>
-                  <td><%= person[i].username %></td>
-                  <td><%= person[i].firstName %> <%= person[i].lastName %></td>
-                  <td><%= person[i].faculty %></td>
-                  <td><%= person[i].major %></td>
-                  <td><%= person[i].year %></td>
-                  <td><%= person[i].branch %></td>
-                  <td><%= person[i].sector %></td>
-                  <td><a href="#" class="btn btn-primary">ตรวจสอบ</a></td>
-                  <td><a href="student/edit/<%= person[i]._id %>" class="btn btn-primary">Edit</a></td>
-                  <td><a href="student/delete/<%= person[i]._id %>" class="btn btn-danger">Delete</a></td>
-                </tr>
+              <tr>
+                <td><%= person[i].username %></td>
+                <td><%= person[i].firstName %> <%= person[i].lastName %></td>
+                <td><%= person[i].faculty %></td>
+                <td><%= person[i].major %></td>
+                <td><%= person[i].year %></td>
+                <td><%= person[i].branch %></td>
+                <td><%= person[i].sector %></td>
+                <td><a href="#" class="btn btn-primary">ตรวจสอบ</a></td>
+                <td><button type="submit" class="btn btn-warning" data-toggle="modal" data-target=".studentModal" onclick="xd('<%= person[i].firstName %>','<%= person[i].lastName %>')">xd</button></td>
+                <td><a href="student/delete/<%= person[i]._id %>" class="btn btn-danger">Delete</a></td>
+              </tr>
 
-                <% } %>
-              </tbody>
-            </table>
-          </div>
-
+              <% } %>
+            </tbody>
+          </table>
           <a href="student/addStudent" class="btn btn-success">เพิ่ม</a>
 
         </div>
@@ -119,6 +116,8 @@
       </li>
     </ul>
   </nav>
-</body>
 
+  <%- include('./studentModal'); -%>
+
+</body>
 </html>
