--- a/views/teacherManage.ejs
+++ b/views/teacherManage.ejs
@@ -10,6 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="../viewsjs/modaljs.js"></script>
 </head>
 
 <body>
@@ -86,7 +87,7 @@
                   <td><%= person[i].faculty %></td>
                   <td><%= person[i].major %></td>
                   <td><%= person[i].position %></td>
-                  <td><a href="#" class="btn btn-primary">ตรวจสอบ</a></td>
+                  <td><a href="#" class="btn btn-primary announce" data-toggle="modal" >ตรวจสอบ</a></td>
                   <td><a href="teacher/edit/<%= person[i]._id %>" class="btn btn-primary">Edit</a></td>
                   <td><a href="teacher/delete/<%= person[i]._id %>" class="btn btn-danger">Delete</a></td>
                 </tr>
@@ -105,7 +106,6 @@
     </div>
   </div>
 
-
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
     <ul style="width:150px">
       <li>
@@ -114,5 +114,28 @@
     </ul>
   </nav>
 </body>
+<!-- END -->
+
+<!-- MODAL -->
+<div class="modal fade" tabindex="-1" role="dialog" id="testModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <input type="hidden" name="dataid" id="">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- END -->
 
 </html>
