--- a/views/courseManage.ejs
+++ b/views/courseManage.ejs
@@ -13,17 +13,19 @@
 </head>
 
 <body>
+
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded" style="min-height: 140px;">
     <!-- Brand/logo -->
-    <p class="navbar-brand" href="#">
-      <img src="./images/User icon.jpg" style="width:140px;">
-    </p>
+    <a class="navbar-brand" href="#">
+      <img src="../images/User icon.jpg" style="width:140px;">
+    </a>
 
     <ul class="navbar-nav ml-auto" style="color:white; ">
       <li>นาย &nbsp; xxxxxxxxxx &nbsp;</li>
       <li>TYPE &nbsp;</li>
       <li>Academic staff &nbsp;</li>
-      <li><a href="/login"><img src="./images/LogOut icon.png" style="width:40px;" ></a></li>
+      <li><img src="../images/LogOut icon.png" style="width:40px;"></li>
     </ul>
   </nav>
 
@@ -33,7 +35,7 @@
       <nav class="col-sm-2">
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">หน้าหลัก</a>
+            <a class="nav-link" href="/main">หน้าหลัก</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">จัดการตึก</a>
@@ -42,7 +44,7 @@
             <a class="nav-link" href="/manage/student">จัดการบุคลากร</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/manage/course">คอร์สเรียน</a>
+            <a class="nav-link active" href="#">คอร์สเรียน</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">คุมสอบ</a>
@@ -51,20 +53,51 @@
             <a class="nav-link" href="#">คำร้อง</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="/manage/year">จัดการปีการศึกษา</a>
-            </li>
+            <a class="nav-link" href="/manage/year">จัดการปีการศึกษา</a>
+          </li>
         </ul>
       </nav>
 
 
       <div class="col-sm-10">
         <div class="container">
-          <div class="jumbotron text-center">
-            <h1 style="font-size:60px">ยินดีต้อนรับเข้าสู่ระบบ</h1>
-            <p style="font-size:30px">เจ้าหน้าที่วิชาการ xxxxxxx xxxxxxx </p>
+            <a href="course/addCourse" class="btn btn-success" style="float:right;">เพิ่มคอร์สเรียน</a>
+          <div style="height: 300px !important; overflow: scroll;">
+            
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <td><b>รหัสวิชา</b></td>
+                  <td><b>ชื่อวิชา</b></td>
+                  <td><b>อาจารย์ผู้สอน</b></td>
+                  <td><b>จัการคอร์สเรียน</b></td>
+                  <td><b>แก้ไข</b></td>
+                  <td><b>ลบ</b></td>
+                </tr>
+              </thead>
+              <tbody>
+                <% for(var i=0; i < course.length; i++) { %>
+
+                <tr>
+                  <td><%= course[i].course_id %></td>
+                  <td><%= course[i].course_name %></td>
+                  <td><a href="#" class="btn btn-primary">อาจารย์ผู้สอน</a></td>
+                  <td><a href="#" class="btn btn-primary">จัดการคอร์สเรียน</a></td>
+                  <td><a href="course/edit/<%= course[i]._id %>" class="btn btn-primary">แก้ไข</a></td>
+                  <td><a href="course/delete/<%= course[i]._id %>" class="btn btn-danger">ลบ</a></td>
+                </tr>
+
+                <% } %>
+              </tbody>
+            </table>
           </div>
+
+          
+
         </div>
       </div>
+
+
     </div>
   </div>
 
