--- a/views/yearManage.ejs
+++ b/views/yearManage.ejs
@@ -13,17 +13,19 @@
 </head>
 
 <body>
+
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark rounded" style="min-height: 140px;">
     <!-- Brand/logo -->
-    <p class="navbar-brand" href="#">
-      <img src="./images/User icon.jpg" style="width:140px;">
-    </p>
+    <a class="navbar-brand" href="#">
+      <img src="../images/User icon.jpg" style="width:140px;">
+    </a>
 
     <ul class="navbar-nav ml-auto" style="color:white; ">
       <li>นาย &nbsp; xxxxxxxxxx &nbsp;</li>
       <li>TYPE &nbsp;</li>
       <li>Academic staff &nbsp;</li>
-      <li><a href="/login"><img src="./images/LogOut icon.png" style="width:40px;" ></a></li>
+      <li><img src="../images/LogOut icon.png" style="width:40px;"></li>
     </ul>
   </nav>
 
@@ -33,7 +35,7 @@
       <nav class="col-sm-2">
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">หน้าหลัก</a>
+            <a class="nav-link" href="/main">หน้าหลัก</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">จัดการตึก</a>
@@ -42,7 +44,7 @@
             <a class="nav-link" href="/manage/student">จัดการบุคลากร</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/manage/course">คอร์สเรียน</a>
+            <a class="nav-link " href="/manage/course">คอร์สเรียน</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">คุมสอบ</a>
@@ -51,20 +53,42 @@
             <a class="nav-link" href="#">คำร้อง</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="/manage/year">จัดการปีการศึกษา</a>
-            </li>
+            <a class="nav-link active" href="#">จัดการปีการศึกษา</a>
+          </li>
         </ul>
       </nav>
 
 
       <div class="col-sm-10">
         <div class="container">
-          <div class="jumbotron text-center">
-            <h1 style="font-size:60px">ยินดีต้อนรับเข้าสู่ระบบ</h1>
-            <p style="font-size:30px">เจ้าหน้าที่วิชาการ xxxxxxx xxxxxxx </p>
-          </div>
+
+                <h1 align="center">จัดการปีการศึกษา</h1>
+
+                <form method="post" action="/manage/year/post">
+                  <div class="form-group">
+                      ปีการศึกษาปัจจุบัน <br>
+                    <input type="text" class="form-control" name="year" placeholder="ปีการศึกษาปัจจุบัน">
+                  </div>
+                  <div class="form-group">
+                      ภาคการศึกษา <br>
+                        <select class="form-control" id="semester" name="prefixName">
+                          <option>ภาคต้น</option>
+                          <option>ภาคปลาย</option>
+                          <option>ภาคฤดูร้อน</option>
+                        </select>
+                      </div>
+        
+                  <button type="submit" class="btn btn-info float-right" >ยืนยัน</button>
+                  
+                </form>
+        
+
+          
+
         </div>
       </div>
+
+
     </div>
   </div>
 
